[package]
name = "egui_component"
version = "0.1.0-alpha.2"
edition = "2024"
authors = ["Zehua Yang <march772827981@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["egui", "ui", "component", "ui-kit", "gui"]
description = "Unstyled, headless egui components with granular styling. Includes a fully-customizable styling system with optional pre-configured dark and light themes."
categories = ["gui"]
repository = "https://github.com/March-mitsuki/egui_component"
homepage = "https://github.com/March-mitsuki/egui_component"

[dependencies]
anyhow = "1"
egui_component_style_macros = "0.1.0-alpha.1"

egui = { version = "0.34", features = ["serde"] }
egui_animation = "0.11"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
eframe = "0.34"
